glFusion ChangeLog

v1.1.0
------------
- Forum did not honor the logged in required to view setting for the new post
  block and searching. (Mark)
- Clear CTL when stories are auto deleted or archived (Mark)
- Do not display profile page for anonymous users (Mark)
- Modified block editor to allow use of advanced editor (Mark)
- Added HTML filtering allow embed tag to configuration (Mark)
- Added css_compress configuration option to configuration (Mark)
- Added default sort order to configuration (Mark)
- Fixed missing </li> on parent menu without children nodes (Mark)
- Fixed issue where What's New and old cached stories were not updated when the
  story was set to auto archive or delete. (Mark)
- Fixed Forum notification email to actually point to the last reply where
  appropriate (Mark)
- Bugfix of template root hook for directories below layout/nouveau/ (Joe)
- Implemented new mailer - added support for secure SMTP (Mark)
- Fixed searching for non-installed plugins when open_basedir restrictions are in
  effect (GL bug #0000741)
- Story cache does not cache date format (Joe)
- Fixed broken image references in Site Tailor Install (Eric)
- Changed hard-coded "N/A" from Admins Only menu with a language file generated neutral "-" (Eric)
- Implemented js.php / css.php to consolidate all CSS and JS (Mark)
- Forum to always use HTML filter for html posts (Mark)
- New option for static pages - include / exclude from search (Mark)
- Several RFI security improvements throughout (Mark)
- Updated Site Tailor to v2.0.0 - Ability to create multiple menus (Mark)
- Search engine enhancements (Mark)
- Comment handling enhancements (Mark)
- Auto detect block tempaltes for left and right (Mark)
- Approve draft from moderation queue fails due to CSRF hardening. (Mark)
- BB2 Update - eliminated redundant hits to vars table (Joe)
- Added $_CONF['hide_adminmenu'] (Joe)
- Added ability for plugins to control moderation queue by returning a string from plugin_itemlist_